# modo-xatlas-kit

./: .gitignore  CMakeLists.txt  LICENSE  README.md  index.cfg  index.xml
source/: xatlas_command.cpp
